--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html;charset=utf-8" /> 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>vitronet – Der führende Dienstleister für Glasfaser- und Energieinfrastruktur in Deutschland</title>
+    <title>fibroEuro</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="" />
